bin/tests/snapshots/shell_idiom__89ecec3b61129cb4b798fe368e56a8f6_lint_errfmt.snap
---
source: bin/tests/shell_idiom.rs
---
{ enterShell = ''
  cp "x; echo INJECTED" d/; chmod 755 "d/x; echo INJECTED"
  cat input | > output sort
  v=$(cat Cargo.*)
  mkdir -p foo; install -Dm644 src foobar/file
  mkdir -p a; mkdir -p */b
  mkdir -p blocked/child && mkdir -p later
  grep() { echo custom; }; egrep workspace Cargo.toml
  sh -c 'v=$(cat file)'
''; }
---
<temp_file_path>>4:3:W:28:[shellcheck] SC2034: v appears unused. Verify use (or export if used externally).
<temp_file_path>>6:24:W:28:[shellcheck] SC2035: Use ./*glob* or -- *glob* so names with dashes won't become options.
<temp_file_path>>8:28:W:28:[shellcheck] SC2196: egrep is non-standard and deprecated. Use grep -E instead.
