bin/tests/snapshots/shell_idiom__8f9a463ea5dbd6bbe07a7c9e7534ca93_fix.snap
---
source: bin/tests/shell_idiom.rs
---
{ shellHook = ''
  export HOME=$(mktemp -d)
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,4 @@
 { shellHook = ''
-  export HOME=$(mktemp -d)
+  export HOME
+  HOME=$(mktemp -d)
 ''; }
