bin/tests/snapshots/shell_idiom__8f9a463ea5dbd6bbe07a7c9e7534ca93_lint_stderr.snap
---
source: bin/tests/shell_idiom.rs
---
{ shellHook = ''
  export HOME=$(mktemp -d)
''; }
---
[shellcheck] Warning: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:10 ]
   │
 2 │   export HOME=$(mktemp -d)
   │          ──┬─  
   │            ╰─── SC2155: Declare and assign separately to avoid masking return values.
───╯
