bin/tests/snapshots/shell_idiom__a9f9844add401ac4e7de43f1fac192e0_lint_json.snap
---
source: bin/tests/shell_idiom.rs
---
pkgs.writeShellScript "x" ''
  mkdir -p d
  cp x d/
''
---
