bin/tests/snapshots/shell_idiom__fb6ea1c206ede093e3ff14d7eaf3e6f9_fix.snap
---
source: bin/tests/shell_idiom.rs
---
drv.overrideAttrs (old: { installPhase = ''
  ${old.installPhase}
  echo more
''; passthru.tests.x = { buildPhase = "make"; }; })
---
