bin/tests/snapshots/shell_idiom__fbc46f9ce2234ab65aed23ac1d323550_fix.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/bin
  cp tool $out/bin/tool
  chmod 755 $out/bin/tool
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,3 @@
 stdenv.mkDerivation { installPhase = ''
-  mkdir -p $out/bin
-  cp tool $out/bin/tool
-  chmod 755 $out/bin/tool
+  install -Dm755 tool "$out"/bin/tool
 ''; }
