bin/tests/snapshots/shell_idiom__fbc46f9ce2234ab65aed23ac1d323550_lint_errfmt.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/bin
  cp tool $out/bin/tool
  chmod 755 $out/bin/tool
''; }
---
<temp_file_path>>2:12:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>3:11:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>4:13:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
<temp_file_path>>2:3:W:33:[shell_idiom] `mkdir -p` + `cp` + `chmod` can be one `install`: `install -Dm755 tool $out/bin/tool`
<temp_file_path>>2:3:I:33:[shell_idiom] The phase doesn't run `runHook preInstall`
<temp_file_path>>4:26:I:33:[shell_idiom] The phase doesn't run `runHook postInstall`
